--- a/calculadora/index.css
+++ b/calculadora/index.css
@@ -1,16 +1,50 @@
-section{
+div{
     background-color: #FF7DAD;
     margin: auto;
     width: 500px;
-     height: 900px;
-
+     height: 700px;
+     border-radius: 3%;
 }
 
-p{
+h1{
     text-align: center;
     color: #FFF;
     padding-top: 40px;
-    font-weight: bold;
-    font-size: 25px;
-   
+    font-family: Arial;
+    font-size: 30px;
+
+
 }
+p{
+    text-align: center;
+    color: #FFF;
+    font-weight: bold;
+    font-size: 15px;
+    font-family: Arial;   
+}
+
+#pantalla{
+    height: 80px;
+    width: 80%;
+    margin: auto;
+    display:flex;
+    font-size: 40px;
+}
+
+table{
+margin: auto;
+padding-top: 30px;
+border-collapse: separate;
+  border-spacing: 10px 5px;
+}
+td{
+    border: 2px solid #A52747;
+    width:65px;
+    height: 67px;
+    border-radius: 5px;
+    box-shadow: 0px 0px 16px #E4376F;
+    text-align: center;
+    font-family: arial;
+    font-size: 27px;
+}
+
