--- a/calculadora/index.css
+++ b/calculadora/index.css
@@ -51,3 +51,17 @@ td{
 input{
     text-align: right;
 }
+
+.botones{
+    border: none;
+    width:65px;
+    height: 67px;
+    text-align: center;
+    font-family: arial;
+    font-size: 27px;
+    background-color: #FF7DAD;
+}
+
+.botones:hover{
+    cursor: pointer;
+}
